--- a/uReplicator-Controller/pom.xml
+++ b/uReplicator-Controller/pom.xml
@@ -23,8 +23,8 @@
 		<log4j.version>1.2.17</log4j.version>
 		<avro.version>1.7.7</avro.version>
 		<helix.version>0.6.5</helix.version>
-		<kafka.version>0.8.2.0</kafka.version>
-		<kafka.scala.version>2.10</kafka.scala.version>
+		<kafka.version>0.8.2.1</kafka.version>
+		<kafka.scala.version>2.11</kafka.scala.version>
 		<jackson.version>2.4.3</jackson.version>
 		<zookeeper.version>3.4.6</zookeeper.version>
 		<restlet.version>2.2.1</restlet.version>
@@ -260,7 +260,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.6-SNAPSHOT</version>
+                <version>0.7.8</version>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
