--- a/config/helix.properties
+++ b/config/helix.properties
@@ -1,3 +1,4 @@
- zkServer=localhost:2181
- instanceId=testHelixMirrorMaker01
- helixClusterName=testMirrorMaker
+zkServer=qaapp2:2181
+#zkServer=localhost:2181
+instanceId=testHelixMirrorMaker01
+helixClusterName=kafkaMirrorMaker
