--- a/config/producer.properties
+++ b/config/producer.properties
@@ -18,8 +18,9 @@
 
 # list of brokers used for bootstrapping knowledge about the rest of the cluster
 # format: host1:port1,host2:port2 ...
-bootstrap.servers=localhost:9094
-client.id=kloak-mirrormaker-test
+bootstrap.servers=localhost:9092
+#bootstrap.servers=localhost:9094
+client.id=mirrormaker-test
 
 # name of the partitioner class for partitioning events; default partition spreads data randomly
 #partitioner.class=
