--- a/config/topicmapping.properties
+++ b/config/topicmapping.properties
@@ -1,1 +1,15 @@
 dummyTopic dummyTopic1
+utm utm
+devices devices
+web-pv web-pv
+web-action web-action
+web-action-other web-action-other
+mina-pv mina-pv
+mina-action mina-action
+mina-action-other mina-action-other
+mobile-pv mobile-pv
+mobile-action mobile-action
+mobile-action-other mobile-action-other
+custom-action custom-action
+sdk-stat sdk-stat-hk
+test test-hks
