--- a/uReplicator-Worker/src/main/resources/log4j.properties
+++ b/uReplicator-Worker/src/main/resources/log4j.properties
@@ -1,5 +1,20 @@
 log4j.rootLogger=INFO, stdout
+log4j.logger.sdk=INFO, rolling
+
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c:%L)%n
+log4j.appender.stdout.layout.ConversionPattern=222[%d] %p %m (%c:%L)%n
+
+
+log4j.appender.rolling=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.rolling.threshold=INFO
+log4j.appender.rolling.layout=org.apache.log4j.PatternLayout
+log4j.appender.rolling.layout.conversionPattern=%msg%n
+log4j.appender.rolling.file=logs/sdk-kafka-log-9090.log
+log4j.appender.rolling.datePattern='.'yyyyMMddHH
+log4j.appender.rolling.encoding=UTF-8
+log4j.appender.rolling.maxFileSize=100MB
+log4j.appender.rolling.maxHistory=80
+log4j.appender.rolling.totalSizeCap=80G
+
