--- a/config/consumer.properties
+++ b/config/consumer.properties
@@ -17,16 +17,16 @@
 # Zookeeper connection string
 # comma separated host:port pairs, each corresponding to a zk
 # server. e.g. "127.0.0.1:3000,127.0.0.1:3001,127.0.0.1:3002"
-zookeeper.connect=127.0.0.1:2181/cluster1
+zookeeper.connect=hkzk0:2181/kafka
 
 # timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=30000
 zookeeper.session.timeout.ms=30000
 
 #consumer group id
-group.id=kloak-mirrormaker-test
+group.id=hkMirrormaker
 
-consumer.id=kloakmms01-sjc1
+consumer.id=mirrormaker-qaapp1
 partition.assignment.strategy=roundrobin
 socket.receive.buffer.bytes=1048576
 fetch.message.max.bytes=8388608
