--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -17,7 +17,7 @@ log4j.rootLogger=INFO, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c)%n
+log4j.appender.stdout.layout.ConversionPattern=111[%d] %p %m (%c)%n
 
 log4j.appender.kafkaAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.kafkaAppender.DatePattern='.'yyyy-MM-dd-HH
@@ -74,3 +74,18 @@ log4j.additivity.kafka.log.LogCleaner=false
 
 log4j.logger.state.change.logger=TRACE, stateChangeAppender
 log4j.additivity.state.change.logger=false
+
+
+
+log4j.appender.rolling=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.rolling.threshold=INFO
+log4j.appender.rolling.layout=org.apache.log4j.PatternLayout
+log4j.appender.rolling.layout.conversionPattern=%msg%n
+log4j.appender.rolling.file=/apps/logs/sdk-kafka-log-9090.log
+log4j.appender.rolling.datePattern='.'yyyyMMddHH
+log4j.appender.rolling.encoding=UTF-8
+log4j.appender.rolling.maxFileSize=100MB
+log4j.appender.rolling.maxHistory=80
+log4j.appender.rolling.totalSizeCap=80G
+
+log4j.logger.sdk=INFO, rolling
