--- a/uReplicator-Worker/pom.xml
+++ b/uReplicator-Worker/pom.xml
@@ -182,6 +182,11 @@
             <artifactId>scalatest_${kafka.scala.version}</artifactId>
             <version>${scalatest.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.typesafe.play</groupId>
+            <artifactId>play-json_2.11</artifactId>
+            <version>2.4.8</version>
+        </dependency>
     </dependencies>
 
     <properties>
