--- a/uReplicator-Worker/pom.xml
+++ b/uReplicator-Worker/pom.xml
@@ -3,7 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.uber.uReplicator</groupId>
     <artifactId>uReplicator-Worker</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>uReplicator-Worker</name>
@@ -14,7 +13,8 @@
     </parent>
     <description>
         Kafka mirror maker with Helix is built for resolving high level consumers rebalancing pain point.
-        Helix provides a good interface to dynamically interact with zookeeper and manages/rebalances a stateful mapping for instance
+        Helix provides a good interface to dynamically interact with zookeeper and manages/rebalances a stateful mapping
+        for instance
         to simple consumer mapping.
     </description>
     <dependencies>
@@ -61,13 +61,6 @@
             <artifactId>jopt-simple</artifactId>
             <version>${jopt-simple.version}</version>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-        </dependency>
-
-
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
@@ -179,55 +172,7 @@
             <version>${scalatest.version}</version>
         </dependency>
     </dependencies>
-
-    <properties>
-        <scala.version>2.11.8</scala.version>
-        <kafka.version>0.10.1.0</kafka.version>
-        <kafka.scala.version>2.11</kafka.scala.version>
-        <helix.version>0.6.5</helix.version>
-        <yammer.version>2.2.0</yammer.version>
-        <zookeeper.version>3.4.6</zookeeper.version>
-        <jopt-simple.version>3.2</jopt-simple.version>
-        <junit.version>4.6</junit.version>
-        <scalatest.version>2.2.5</scalatest.version>
-
-        <jdk.version>1.8</jdk.version>
-        <avro.version>1.7.7</avro.version>
-        <jackson.version>2.4.3</jackson.version>
-        <restlet.version>2.2.1</restlet.version>
-        <testng.version>6.0.1</testng.version>
-        <commons.config.version>1.6</commons.config.version>
-        <commons.io.version>2.4</commons.io.version>
-        <commons.cli.version>1.3.1</commons.cli.version>
-        <jetty.version>8.1.8.v20121106</jetty.version>
-        <apache.http.version>4.1.2</apache.http.version>
-        <io.dropwizard.metrics.version>3.1.1</io.dropwizard.metrics.version>
-        <fastjson.version>1.1.41</fastjson.version>
-    </properties>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>scala-tools.org</id>
-            <name>Scala-tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.scala-tools</groupId>
-                    <artifactId>maven-scala-plugin</artifactId>
-                    <version>2.14.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.3</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.scala-tools</groupId>
@@ -265,29 +210,28 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-assembly-plugin</artifactId>
-              <version>2.4.1</version>
-              <configuration>
-                <!-- get all project dependencies -->
-                <descriptorRefs>
-                  <descriptorRef>jar-with-dependencies</descriptorRef>
-                </descriptorRefs>
-              </configuration>
-              <executions>
-                <execution>
-                  <id>make-assembly</id>
-                  <phase>package</phase>
-                  <goals>
-                    <goal>single</goal>
-                  </goals>
-                </execution>
-              </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <!-- get all project dependencies -->
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
