--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <log4j.version>1.2.17</log4j.version>
         <io.dropwizard.metrics.version>3.1.1</io.dropwizard.metrics.version>
         <jaccoco.version>0.7.8</jaccoco.version>
+        <jgit.version>4.6.1.201703071140-r</jgit.version>
     </properties>
 
     <modules>
@@ -135,6 +136,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
