--- a/uReplicator-Worker/pom.xml
+++ b/uReplicator-Worker/pom.xml
@@ -156,15 +156,11 @@
             <artifactId>org.restlet.ext.jetty</artifactId>
             <version>${restlet.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.eclipse.jgit</groupId>
             <artifactId>org.eclipse.jgit</artifactId>
-            <version>4.0.0.201506020755-rc3</version>
+            <version>${jgit.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
